Bug 58511 - EDITING: Cut fontwork object does not work
Summary: EDITING: Cut fontwork object does not work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: difficultyInteresting, needsDevEval, topicDebug
: 101840 (view as bug list)
Depends on:
Blocks: FontWork-WordArt Cut-Copy
  Show dependency treegraph
 
Reported: 2012-12-19 11:20 UTC by Rainer Bielefeld Retired
Modified: 2025-07-31 16:55 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (10.84 KB, application/vnd.oasis.opendocument.text)
2012-12-19 11:20 UTC, Rainer Bielefeld Retired
Details
bt on master (4.92 KB, text/plain)
2013-02-09 20:28 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-12-19 11:20:05 UTC
Created attachment 71797 [details]
Sample Document

Steps to reproduce with parallel installation of  "LOdev  4.0.0.0.beta1   -  GERMAN UI / German Locale  [Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)]"  {tinderbox: @6, pull time 2012-12-06} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch:
1. open attachment
2. click fontwork to select 
3. <control+x> for 'Cut'

Current behavior: Nothing happens
Expected behavior: Object disappears
Also will not work from men 'Edit' or from context menu
Wors fine in Calc and Draw.
Works fine in Writer for other Draw objects
Already in LibO 3.3, that never worked in LibO, is inherited from OOo. I was sure that we already have a report, but I can't find any.
              
Operating System: Windows 7
Version: 3.3.0 Beta2
Comment 1 Rainer Bielefeld Retired 2012-12-19 11:41:49 UTC
Works in other applications, so it should not be too difficult to fix that

NEW due to AOOo issue
Comment 2 Julien Nabet 2013-02-09 20:28:29 UTC
Created attachment 74508 [details]
bt on master

On pc Debian x86-64 with master sources updated today, I reproduced the problem.

I used "break __cxa_throw" in gdb and got the bt attached.
Comment 3 Joel Madero 2014-02-27 23:05:59 UTC
In order to limit the confusion between ProposedEasyHack and EasyHack and to make queries much easier we are changing ProposedEasyHack to NeedsDevEval.

Thank you and apologies for the noise
Comment 4 Robinson Tryon (qubit) 2015-12-14 06:13:20 UTC Comment hidden (obsolete)
Comment 5 Björn Michaelsen 2016-01-26 18:02:35 UTC
topicDebug is a Topic.
Comment 6 Björn Michaelsen 2016-01-26 18:04:57 UTC
Remove skillDebug, superceded by topicDebug.
Comment 7 c.bessiere 2016-02-12 09:28:56 UTC
The problem is the same with Writer 5.0.4.2
Comment 8 Buovjaga 2016-09-24 18:46:48 UTC
*** Bug 101840 has been marked as a duplicate of this bug. ***
Comment 9 Telesto 2017-11-16 21:25:19 UTC
Repro with:
Version: 6.0.0.0.alpha1+
Build ID: b3f1d199a72ce87cb65ddaeac922564f57da6a4d
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-11-06_00:10:53
Locale: nl-NL (nl_NL); Calc: CL
Comment 10 QA Administrators 2018-11-17 03:46:08 UTC Comment hidden (obsolete)
Comment 11 QA Administrators 2020-11-17 05:00:30 UTC Comment hidden (obsolete)
Comment 12 QA Administrators 2022-11-18 03:36:14 UTC Comment hidden (obsolete)
Comment 13 QA Administrators 2024-11-18 03:15:36 UTC Comment hidden (obsolete)
Comment 14 Rainer Bielefeld Retired 2024-11-18 09:18:33 UTC
Still REPRODUCIBLE with Server Installation of Version: 25.2.0.0.alpha0+ (X86_64)
Build ID: d5143c058bfdc0f5674c3e0a88fae2f9cbe28a0a
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US; Theme: Automatic Colibre
Calc: threaded 
Special User Test Profile for testing
Comment 15 林博仁 Buo-ren Lin 2025-07-03 11:54:43 UTC
Hello all, after some debugging with the help of VSCode Copilot w/ Claude Sonnet 4 LLM I seemed to have pinpointed the root case of this bug!

In the SwWrtShell::DelRight class method where the cut operation logic will call, the GetSelectionType() call returned 0x10200 for this object, which is a bitwise OR-ed value of SelectionType::FontWork and SelectionType::DrawObject and assigned the value to the nSelection variable. The variable won't match any cases in the subsequent switch statement where the object removal operation will be done as all the cases only match a single SelectionType value.

I have submitted a patch to fix this issue:
https://gerrit.libreoffice.org/c/core/+/187294
, feel free to check it out.

Best regards,
Buo-ren Lin
Comment 16 Commit Notification 2025-07-29 04:00:55 UTC
Buo-ren Lin (OSSII) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e61b6a9709370b07ce8c81ea596d1f8eff941928

tdf#58511 sw: Fix source fontwork object not removed after being cut

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 林博仁 Buo-ren Lin 2025-07-31 16:54:30 UTC
(In reply to Commit Notification from comment #16)

I can verify that in the following daily build the bug is no longer reproduced:

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e03da71738c72bbaecb824b4ba356a0a9923a0ff
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+wayland)
Locale: zh-TW (zh_TW.UTF-8); UI: en-US
Calc: threaded